Potentially fix horizontal scrolling issue on mobile

--- a/themes/tegakituesday.com/static/css/style.css
+++ b/themes/tegakituesday.com/static/css/style.css
@@ -67,7 +67,11 @@
 	--gb-lm-light-gray: #7c6f64;
 }
 
+html, body {
+	overflow-x: hidden;
+}
 body {
+	position: relative;
 	font-family: 'Nunito', 'K Gothic', sans-serif;
 	margin: 0;
 	width: 100%;
